set white space property to normal to make sure it is not affecting word wrap property

--- a/src/App.css
+++ b/src/App.css
@@ -412,6 +412,7 @@ a:hover {
         text-align: justify;
         font-size: 1em;
         word-wrap: break-word;
+        white-space: normal;
     }
 
     .nav-menu {
